--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,132 @@
-// Place all the styles related to the home controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.body{
+  background-color: rgb(245, 245, 245);
+  font-family: Arial,游ゴシック体,YuGothic,メイリオ,Meiryo,sans-serif;
+}
+.main {
+  width: 100%;
+  .slide {
+    height: 390px;
+    background-image: url("006mamechire.jpg");
+    background-size: cover;
+  }
+}
+.nav {
+  width: 100%;
+  padding: 56px 0px 30px;
+  background-color: #fff;
+  ul {
+    display: flex;
+    list-style: none;
+    align-items: center;
+  }
+  li {
+    margin: 10px 0px 0px 10px;
+    display: inline-block;
+  }
+  a {
+    text-decoration: none;
+    color: #000;
+    padding: 8px 16px;
+    background-color: rgb(245, 245, 245);
+    border-radius: 16px;
+    min-width: 100px;
+  }
+  .Category {
+    margin-bottom: 16px;
+    text-align: center;
+    font-size: 28px;
+    font-weight: 600;
+  }
+  .Categorys {
+    display: flex;
+    justify-content: center;
+  }
+}
+.main-content{
+  margin: 0 auto;
+  height: 100%;
+  max-width: 1020px;
+  padding-top: 40px;
+  padding-bottom: 100px;
+  .main-contents {
+    &__top {
+      margin-bottom: 16px;
+      display: flex;
+      justify-content: space-between;
+      a {
+        color: rgb(0, 149, 238);
+      }
+    }
+    &__header {
+      margin-bottom: 16px;
+      display: flex;
+      justify-content: space-between;
+      margin-top: 60px;
+      a {
+        color: rgb(0, 149, 238);
+      }
+      &----top-name {
+        font-weight: 600;
+        font-size: 24px;
+      }
+      &--name {
+        font-weight: 600;
+        font-size: 24px;
+      }
+    }
+    &__goods{
+      ul {
+        width: 100%;
+        display: flex;
+      }
+      li {
+        width: 20%;
+        padding: 10px;
+        white-space: nowrap;
+        .main-contents-box {
+          height: 252px;
+          .contents-item {
+            &__image {
+              height: 188px;
+              position: relative;
+              &--price {
+                position: absolute;
+                bottom: 8px;
+                padding: 0 12px;
+                align-items: center;
+                background: rgba(0,0,0,.3);
+                border-radius: 0 14px 14px 0;
+                color: #fff;
+                font-size: 17px;
+                height: 28px;
+                text-align: center;
+                line-height: 28px;
+                display: inline-block;
+              }
+            }
+            &__index {
+              background-color: #fff;
+              color: #222;
+              font-size: 14px;
+              height: 64px;
+              padding: 0 12px;
+              &--name {
+                line-height: 64px;
+                overflow: scroll;
+              }
+            }
+          }
+        }
+        .main-contents-box:hover {
+          border: solid 1px rgb(0, 149, 238);
+        }
+      }
+    }
+  }
+}
+a {
+  text-decoration: none;
+}
+.main-contents__header--name :not(.main-contents__header--name:first) {
+  margin-top: 60px;
+}
