--- a/app/views/home/top.html.haml
+++ b/app/views/home/top.html.haml
@@ -1,3 +1,114 @@
-%h1 Home#top
-%p Find me in app/views/home/top.html.haml
-%p 変更
+.body
+  .main
+    .slide
+      画像
+    .nav
+      .Category
+        人気のカテゴリー
+      %ul.Categorys
+        %li
+          =link_to "レディース", class: "Categorys__list--item"
+        %li
+          =link_to "メンズ", class: "Categorys__list--item"
+        %li
+          =link_to "家電・スマホ・カメラ", class: "Categorys__list--item"
+        %li
+          =link_to "おもちゃ・ホビー・グッズ", class: "Categorys__list--item"
+    .main-content
+      .main-contents
+        .main-contents__top
+          .main-contents__header--name
+            レディース新着アイテム
+          =link_to "もっと見る ＞", class: "main-contents__header--more"
+        .main-contents__goods
+          %ul
+            %li
+              .main-contents-box
+                %a.contents-item{href: "#"}
+                  .contents-item__image
+                    .contents-item__image--price
+                      %span ¥1,000
+                  .contents-item__index
+                    .contents-item__index--name 
+                      %span テスト
+            %li
+              .main-contents-box
+                %a.contents-item{href: "#"}
+                  .contents-item__image
+                    .contents-item__image--price
+                      %span ¥1,000
+                  .contents-item__index
+                    .contents-item__index--name 
+                      %span テスト
+            %li
+              .main-contents-box
+                %a.contents-item{href: "#"}
+                  .contents-item__image
+                    .contents-item__image--price
+                      %span ¥1,000
+                  .contents-item__index
+                    .contents-item__index--name 
+                      %span テスト
+            %li
+              .main-contents-box
+                %a.contents-item{href: "#"}
+                  .contents-item__image
+                    .contents-item__image--price
+                      %span ¥1,000
+                  .contents-item__index
+                    .contents-item__index--name 
+                      %span テスト
+            %li
+              .main-contents-box
+                %a.contents-item{href: "#"}
+                  .contents-item__image
+                    .contents-item__image--price
+                      %span ¥1,000
+                  .contents-item__index
+                    .contents-item__index--name 
+                      %span テスト
+        .main-contents__header
+          .main-contents__header--name
+            メンズ新着アイテム
+          =link_to "もっと見る ＞", class: "main-contents__header--more"
+        .main-contents__goods
+          %ul
+            %li
+              .main-contents-box
+                %a.contents-item{href: "#"}
+                  .contents-item__image
+                    .contents-item__image--price
+                      %span ¥1,000
+                  .contents-item__index
+                    .contents-item__index--name 
+                      %span テスト
+        .main-contents__header
+          .main-contents__header--name
+            家電・スマホ・カメラ新着アイテム
+          =link_to "もっと見る ＞", class: "main-contents__header--more"
+        .main-contents__goods
+          %ul
+            %li
+              .main-contents-box
+                %a.contents-item{href: "#"}
+                  .contents-item__image
+                    .contents-item__image--price
+                      %span ¥1,000
+                  .contents-item__index
+                    .contents-item__index--name 
+                      %span テスト
+        .main-contents__header
+          .main-contents__header--name
+            おもちゃ・ホビー・グッズ新着アイテム
+          =link_to "もっと見る ＞", class: "main-contents__header--more"
+        .main-contents__goods
+          %ul
+            %li
+              .main-contents-box
+                %a.contents-item{href: "#"}
+                  .contents-item__image
+                    .contents-item__image--price
+                      %span ¥1,000
+                  .contents-item__index
+                    .contents-item__index--name 
+                      %span テスト
