--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -6,6 +6,7 @@ body {
   font-family: Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
   font-size: 14px;
   max-width: 100%;
+  margin: 0;
   header.top-content {
     background-color: #fff;
     box-shadow: rgba(0, 0, 0, 0.18)0px 2px 4px;
