--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,7 +17,7 @@
               = image_tag "/logo_red.svg", alt: "Mercari"
           
           %form.searchbox{action: ""}
-            %input.texts{type: "search", name: "keyword", placeholder: "What Do you search for something?", value: ""}
+            %input.texts{type: "search", name: "keyword", placeholder: "Do you look for anything?", value: ""}
             %button.glass
               .glass-icon{"aria-hidden":"true", height: "16", viewbox: "0 0 16 16", width: "16"}
                 %i.fas.fa-search
@@ -49,93 +49,95 @@
                 %a.login-acount{href: "https://www.mercari.com/jp/login/?login_callback=https%3A%2F%2Fwww.mercari.com%2Fjp%2Ffeatured%2Fcamp%2F"} ログイン
     = yield
     .footer
-    .upper-footer
-      .upper-footer__middle-upper
-        .upper-footer__middle-upper--content
-          %h1.upper-text スマホでかんたんフリマアプリ
-          %h1.bottom-text 今すぐ無料ダウンロード！
-          .upper-footer__middle-bottom
-            %ul.download-icons
-              %li.mercari-download
-                = image_tag "/logo_red.svg", alt: "", class: "mercarilogo"
-              %li.appstore
-                %a{href: "https://itunes.apple.com/jp/app/id667861049?l=ja&mt=8", target: "_blank"}
-                  %img{alt: "", height: "40", src: "//www-mercari-jp.akamaized.net/assets/img/common/common/app-store.svg?2177740229", class: "gotoappstore"}/
-              %li.googleplay
-                %a{href: "https://play.google.com/store/apps/details?id=com.kouzoh.mercari&hl=ja", target: "_blank"}
-                  %img{alt: "", height: "40", src: "//www-mercari-jp.akamaized.net/assets/img/common/common/google-play.svg?2177740229", class: "gotogoogleplay"}/
-        -# .upper-footer__right-photo 
-        -#   = image_tag "/75424503_2567574616665473_9104779404172591104_o.jpg", alt: "", class: "right-photo"
-    .bottom-footer
-      .bottom-footer__content
-        .bottom-footer__about
-          %h2.title メルカリについて
-          %ul.links
-            %li.outer-links
-              = link_to "会社概要（運営会社）", "https://about.mercari.com/"
-            %li.outer-links
-              = link_to "採用情報", "https://careers.mercari.com/"
-            %li.outer-links
-              = link_to "プレスリリース", "https://about.mercari.com/press/news/"
-            %li.outer-links
-              = link_to "公式ブログ", "https://jp-news.mercari.com/"
-            %li.outer-links
-              = link_to "メルカリロゴ利用ガイドライン", "https://www.mercari.com/jp/logo-guidelines/"
-            .social-icons
-              %i.fab.fa-twitter
-              %i.fab.fa-facebook-square
-        .bottom-footer__guide
-          %h2.title ヘルプ＆ガイド
-          %ul.links
-            %li.outer-links
-              = link_to "メルカリガイド", "https://www.mercari.com/jp/help_center/"
-            %li.outer-links
-              = link_to "らくらくメルカリ便", "https://www.mercari.com/jp/rakuraku-mercari/"
-            %li.outer-links
-              = link_to "ゆうゆうメルカリ便", "https://www.mercari.com/jp/yuyu-mercari/"
-            %li.outer-links
-              = link_to "大型メルカリ便", "https://www.mercari.com/jp/rakuraku-ogata/"
-            %li.outer-links
-              = link_to "車体取引ガイド", "https://www.mercari.com/jp/guide/car/"
-            %li.outer-links
-              = link_to "メルカリあんしん・あんぜん宣言！", "https://www.mercari.com/jp/safe/description/"
-            %li.outer-links
-              = link_to "偽ブランド品撲滅への取り組み", "https://www.mercari.com/jp/authenticity/"
-            %li.outer-links
-              = link_to "メルカリボックス", "https://www.mercari.com/jp/box/"
-        .bottom-footer__privacy
-          %h2.title プライバシーと利用規約
-          .left-side
+      .upper-footer
+        .upper-footer__middle-upper
+          .upper-footer__middle-upper--content
+            %h1.upper-text スマホでかんたんフリマアプリ
+            %h1.bottom-text 今すぐ無料ダウンロード！
+            .upper-footer__middle-bottom
+              %ul.download-icons
+                %li.mercari-download
+                  = image_tag "/logo_red.svg", alt: "", class: "mercarilogo"
+                %li.appstore
+                  %a{href: "https://itunes.apple.com/jp/app/id667861049?l=ja&mt=8", target: "_blank"}
+                    %img{alt: "", height: "40", src: "//www-mercari-jp.akamaized.net/assets/img/common/common/app-store.svg?2177740229", class: "gotoappstore"}/
+                %li.googleplay
+                  %a{href: "https://play.google.com/store/apps/details?id=com.kouzoh.mercari&hl=ja", target: "_blank"}
+                    %img{alt: "", height: "40", src: "//www-mercari-jp.akamaized.net/assets/img/common/common/google-play.svg?2177740229", class: "gotogoogleplay"}/
+          .upper-footer__right-photo 
+            = image_tag "phoneman.jpeg", alt: "", class: "right-photo"
+      .bottom-footer
+        .bottom-footer__content
+          .bottom-footer__about
+            %h2.title メルカリについて
             %ul.links
               %li.outer-links
-                = link_to "プライバシーポリシー", "https://www.mercari.com/jp/privacy/"
+                = link_to "会社概要（運営会社）", "https://about.mercari.com/"
               %li.outer-links
-                = link_to "メルカリ利用規約", "https://www.mercari.com/jp/tos/"
+                = link_to "採用情報", "https://careers.mercari.com/"
               %li.outer-links
-                = link_to "あんしんスマホサポート制度に関する利用特約", "https://www.mercari.com/jp/tos_smartphone_support/"
+                = link_to "プレスリリース", "https://about.mercari.com/press/news/"
               %li.outer-links
-                = link_to "コンプライアンスポリシー", "https://www.mercari.com/jp/compliance/"
-          .right-side
-            %ul.links 
+                = link_to "公式ブログ", "https://jp-news.mercari.com/"
               %li.outer-links
-                = link_to "個人データのあんぜん管理に係る基本方針", "https://www.mercari.com/jp/data_security/"
+                = link_to "メルカリロゴ利用ガイドライン", "https://www.mercari.com/jp/logo-guidelines/"
+              .social-icons
+                =link_to "https://twitter.com/mercari_jp" do
+                  %i.fab.fa-twitter
+                =link_to "https://www.facebook.com/marcarijp" do
+                  %i.fab.fa-facebook-square
+          .bottom-footer__guide
+            %h2.title ヘルプ＆ガイド
+            %ul.links
               %li.outer-links
-                = link_to "特定商取引に関する表記", "https://www.mercari.com/jp/tokutei/"
+                = link_to "メルカリガイド", "https://www.mercari.com/jp/help_center/"
               %li.outer-links
-                = link_to "資金決済法に基づく表示", "https://www.mercari.com/jp/shikin_kessai/"
+                = link_to "らくらくメルカリ便", "https://www.mercari.com/jp/rakuraku-mercari/"
               %li.outer-links
-                = link_to "法令順守と犯罪抑止のために", "https://about.mercari.com/sustainability/safe-secure-and-fair-transactions/"
-        .bottom-footer__country
-          %h2.title 国
-          %ul.links
-            %li.outer-links
-              = link_to "日本", "https://www.mercari.com/jp/"
-            %li.outer-links
-              = link_to "United States", "https://www.mercari.com/"
-      .bottom-footer__copyright
-        .mercari-space
-          = link_to "mercari", "https://www.mercari.com/jp/"
-          .mercari__white-logo
-            = image_tag "/logo_white.svg", alt: ""
-          .mercari__name mercari
-        .mercari__copyright © 2019 Mercari
+                = link_to "ゆうゆうメルカリ便", "https://www.mercari.com/jp/yuyu-mercari/"
+              %li.outer-links
+                = link_to "大型メルカリ便", "https://www.mercari.com/jp/rakuraku-ogata/"
+              %li.outer-links
+                = link_to "車体取引ガイド", "https://www.mercari.com/jp/guide/car/"
+              %li.outer-links
+                = link_to "メルカリあんしん・あんぜん宣言！", "https://www.mercari.com/jp/safe/description/"
+              %li.outer-links
+                = link_to "偽ブランド品撲滅への取り組み", "https://www.mercari.com/jp/authenticity/"
+              %li.outer-links
+                = link_to "メルカリボックス", "https://www.mercari.com/jp/box/"
+          .bottom-footer__privacy
+            %h2.title プライバシーと利用規約
+            .left-side
+              %ul.links
+                %li.outer-links
+                  = link_to "プライバシーポリシー", "https://www.mercari.com/jp/privacy/"
+                %li.outer-links
+                  = link_to "メルカリ利用規約", "https://www.mercari.com/jp/tos/"
+                %li.outer-links
+                  = link_to "あんしんスマホサポート制度に関する利用特約", "https://www.mercari.com/jp/tos_smartphone_support/"
+                %li.outer-links
+                  = link_to "コンプライアンスポリシー", "https://www.mercari.com/jp/compliance/"
+            .right-side
+              %ul.links 
+                %li.outer-links
+                  = link_to "個人データのあんぜん管理に係る基本方針", "https://www.mercari.com/jp/data_security/"
+                %li.outer-links
+                  = link_to "特定商取引に関する表記", "https://www.mercari.com/jp/tokutei/"
+                %li.outer-links
+                  = link_to "資金決済法に基づく表示", "https://www.mercari.com/jp/shikin_kessai/"
+                %li.outer-links
+                  = link_to "法令順守と犯罪抑止のために", "https://about.mercari.com/sustainability/safe-secure-and-fair-transactions/"
+          .bottom-footer__country
+            %h2.title 国
+            %ul.links
+              %li.outer-links
+                = link_to "日本", "https://www.mercari.com/jp/"
+              %li.outer-links
+                = link_to "United States", "https://www.mercari.com/"
+        .bottom-footer__copyright
+          .mercari-space
+            = link_to "mercari", "https://www.mercari.com/jp/"
+            .mercari__white-logo
+              = image_tag "/logo_white.svg", alt: ""
+            .mercari__name mercari
+          .mercari__copyright © 2019 Mercari
