--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -106,22 +106,25 @@
   .social-icons {
     display: flex;
     margin-top: 30px;
-  i.fab.fa-twitter {
-    content: "\f099";
-    font: normal 14px/1 FontAwesome;
-    color: white;
-    font-size: 30px;
-    font-weight: 900;
-    margin-right: 20px;
+    a {
+      text-decoration: none;
+    }
+    i.fab.fa-twitter {
+      content: "\f099";
+      font: normal 14px/1 FontAwesome;
+      color: white;
+      font-size: 30px;
+      font-weight: 900;
+      margin-right: 20px;
+    }
+    i.fab.fa-facebook-square {
+      content: "\f082";
+      font: normal 14px/1 FontAwesome;
+      color: white;
+      font-size: 30px;
+      font-weight: 900;
   }
-  i.fab.fa-facebook-square {
-    content: "\f082";
-    font: normal 14px/1 FontAwesome;
-    color: white;
-    font-size: 30px;
-    font-weight: 900;
-  }
-  }
+}
   h2 {
     line-height: 1.4;
     color: #ffffff;
@@ -138,10 +141,12 @@
   li:first-child {
     margin: 16px 0 0;
   }
+  a:hover {
+    text-decoration: underline;
+  }
   a {
     font-size: 12px;
     // margin: 14px 0 0;
-    text-decoration: none;
     color: #ffffff;
     opacity: 0.7;
   }
