--- a/app/assets/stylesheets/_header_footer.scss
+++ b/app/assets/stylesheets/_header_footer.scss
@@ -28,8 +28,7 @@
       .footer{
         font-size:12px;
         height: 170px;
-        
-        align-items: center; /* 縦方向中央揃え */
+        align-items: center;
         justify-content: center;
         position: relative;
         .text-box{
@@ -38,7 +37,6 @@
             position: relative;
             bottom: 40px;
             &__box{
-              
               a:-webkit-any-link{
                 text-decoration: none;
                 color: black;
@@ -51,14 +49,12 @@
               .text-in{
                 display:flex;
                 margin: 0 auto;
-                
                 .text{
                   padding: 40px 5px;
                 }
               }  
             }
           }
-        
           .logo-box{
             position: relative;
             bottom: 40px;
@@ -84,11 +80,11 @@
     }
   }
 }
+
+
 @media screen and (max-width: 768px){
   .body{
-    position: relative;
     background: #f5f5f5;
-    font-family: 'Source Sans Pro', Helvetica , Arial, '游ゴシック体', 'YuGothic', 'メイリオ', 'Meiryo', sans-serif;
     font-size: 14px;
     color: #333;
     line-height: 1;
@@ -98,84 +94,70 @@
       .header-logo{
         margin: 0 auto;
         width:120px;
-        position: relative;
-        top:10px;
+        height: 33px;
         cursor: pointer;
+        margin: 0 auto;
+        position: relative;
+        top:11.5px;
       }
       .header-logo:hover{
         opacity: 0.7;
       }
     }
-  
-    .footer{
-      margin:0 auto;
-      width:456px;
-      height: calc(100vh - 364px);
-      bottom: 0;
-      font-size:12px;
-        .footer-text{
-          margin:0 auto;
-          position: relative;
-          display: block;
-          padding:0 10px;
-          top:140px;
-          &__box{
-            display: block;
-            
-            position: relative;
-            margin:0;
-            text-align: center;
-            a:-webkit-any-link{
-              text-decoration: none;
-              color: black;
-              opacity: 0.7;
-            }
-            a:hover{
-              color: #aaaaaa;
-              border-bottom:solid 1px #aaaaaa;
-            }
-            &--left{
-              margin:15px 10px;
-            }
-            &--center{
-              margin:15px 10px;
-            }
-            &--right{
-              margin:15px 10px;
-            }
-            .text{
-              cursor: pointer;
-              display: block;
-              margin: 0 100px;
+    .body-foot{
+      margin:108px auto 0;
+      width: 700px;
+      max-width: 50%;
+      height: 170px;
+      padding: 40px 0;
+      position: relative;
+      .footer{
+        font-size:12px;
+        height: 170px;
+        align-items: center; 
+        justify-content: center;
+        position: relative;
+        .text-box{
+          height: 170px;
+          .footer-text{
+            &__box{
+              a:-webkit-any-link{
+                text-decoration: none;
+                color: black;
+                opacity: 0.7;
               }
-            p{
-              justify-content: fixed;
-            }
-            p:hover{
-              color: #aaaaaa;
+              a:hover{
+                color: #aaaaaa;
+                border-bottom:solid 1px #aaaaaa;
+              }
+              .text-in{
+                margin: 0 auto;
+                .text{
+                  margin: 16px 5px 0;
+                }
+              }  
             }
           }
+        
+          .logo-box{
+            position: relative;
+            .footer-logo{
+              margin: 40px auto 0;
+              max-width: 50%;
+              width: 80px;
+              cursor: pointer;
+              position: relative;
+            }
+            .footer-logo:hover{
+              opacity: 0.7;
+            }
+          }
+          .logo-content{
+            text-align: center;
+            margin: 0 auto;
+            position: relative;
+          }
         }
-      
-      .logo-box{
-        position: relative;
-        top:160px;
-        .footer-logo{
-          margin: 0 auto;
-          max-width: 50%;
-          width: 80px;
-          cursor: pointer;
-          position: relative;
-        }
-        .footer-logo:hover{
-          opacity: 0.7;
-        }
-      }
-      .logo-content{
-        text-align: center;
-        margin: 0 auto;
-        position: relative;
-        top:160px;
       }
     }
   }
