--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -55,17 +55,14 @@
             %h1.upper-text スマホでかんたんフリマアプリ
             %h1.bottom-text 今すぐ無料ダウンロード！
             .upper-footer__middle-bottom
-              %ul.download-icons
-                %li.mercari-download
-                  = image_tag "/logo_red.svg", alt: "", class: "mercarilogo"
-                %li.appstore
-                  %a{href: "https://itunes.apple.com/jp/app/id667861049?l=ja&mt=8", target: "_blank"}
-                    %img{alt: "", height: "40", src: "//www-mercari-jp.akamaized.net/assets/img/common/common/app-store.svg?2177740229", class: "gotoappstore"}/
-                %li.googleplay
-                  %a{href: "https://play.google.com/store/apps/details?id=com.kouzoh.mercari&hl=ja", target: "_blank"}
-                    %img{alt: "", height: "40", src: "//www-mercari-jp.akamaized.net/assets/img/common/common/google-play.svg?2177740229", class: "gotogoogleplay"}/
+              = image_tag "/logo_red.svg", alt: "", class: "mercarilogo"
+              %a.appstore{href: "https://itunes.apple.com/jp/app/id667861049?l=ja&mt=8", target: "_blank"}
+                %img{alt: "", height: "40", src: "//www-mercari-jp.akamaized.net/assets/img/common/common/app-store.svg?2177740229", class: "gotoappstore"}/
+              %a.googleplay{href: "https://play.google.com/store/apps/details?id=com.kouzoh.mercari&hl=ja", target: "_blank"}
+                %img{alt: "", height: "40", src: "//www-mercari-jp.akamaized.net/assets/img/common/common/google-play.svg?2177740229", class: "gotogoogleplay"}/
           .upper-footer__right-photo 
-            = image_tag "phoneman.jpeg", alt: "", class: "right-photo"
+            -# = image_tag "phoneman.jpeg", alt: "", class: "right-photo"
+            = image_tag "phoneman.jpg", alt: "", class: "right-photo"
       .bottom-footer
         .bottom-footer__content
           .bottom-footer__about
@@ -135,9 +132,7 @@
               %li.outer-links
                 = link_to "United States", "https://www.mercari.com/"
         .bottom-footer__copyright
-          .mercari-space
-            = link_to "mercari", "https://www.mercari.com/jp/"
-            .mercari__white-logo
-              = image_tag "/logo_white.svg", alt: ""
-            .mercari__name mercari
+          = link_to "◆ mercari", "https://www.mercari.com/jp/", class: "logo"
           .mercari__copyright © 2019 Mercari
+
+
