--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -110,10 +110,16 @@
               color: #222;
               font-size: 14px;
               height: 64px;
-              padding: 0 12px;
+              padding: 12px;
+              white-space: normal;
+              word-break: break-word;
+              overflow: hidden;
               &--name {
-                line-height: 64px;
-                overflow: scroll;
+                display: inline-block;
+                height: 2.8em;
+                overflow: hidden;
+                // line-height: 64px;
+                // overflow: scroll;ビュー崩れの為、一旦コメントアウト
               }
             }
           }
