--- a/app/views/mypage/mypage.html.haml
+++ b/app/views/mypage/mypage.html.haml
@@ -3,7 +3,7 @@
     %a{ href: "#" }
     %img.main__user__icon{ href: "#", src: "assets/106_h_24.png" }
       %h2 SRB
-    .main__user__records 
+    .main__user__records
       %span 評価 0 出品数 0
 
   .main__info
@@ -16,36 +16,33 @@
         %h3
           %a{ href: "#" }
             やることリスト
-
     .main__info__messages
       %ul.main__info__messages__notification
         %li.main__info__messages__notification__list
-          %figure
-            %img.main__info__messages__notification__list__box{ href: "#", src: "assets/logo_red.svg" }
-          .main__info__messages__notification__list__text
-            <お買い物応援!> ¥1000の商品を実質1円でご購入頂けます!
-          %i.fa.fa-clock-o 22時間前
-          %i.fa.fa-arrow-right
-        %li.main__info__messages__notification__all
-          一覧を見る
-
-      %ul.main__info__messages__todo
-        %li.main__info__messages__todo__list
-          %img.main__info__messages__todo__list__box{ href: "#", src: "assets/logo_red.svg" }
-          .main__info__messages__todo__list__text
-            ご登録のメールアドレスに認証メールを送りました。メールに記載のURLをクリックして、メールアドレスを認証してください。
-          %i.fa.fa-clock-o 2日前
-          %i.fa.fa-arrow-right
-        %li.main__info__messages__todo__all
-          一覧を見る
+          %a{ href: "#" }
+            %figure
+            %img.main__info__messages__notification__list__box{ src: "assets/logo_red.svg" }
+            .main__info__messages__notification__list__form
+              .main__info__messages__notification__list__form__text
+                <お買い物応援!> ¥1,000の商品を実質1円でご購入いただけます！
+              %i.fa.fa-clock-o 22時間前
+              %i.fa.fa-chevron-right
+        .main__info__messages__notification__all
+          %a{ href: "#" }
+            一覧を見る
 
   .main__product
     .main__product__header
       %h2 購入した商品
     %ul.main__product__tabs
-      %li
-        %h3 取引中
-        %h3 過去の取引
+      %li.main__product__tabs__active1
+        %h3
+          %a{ href: "#" }
+            取引中
+      %li.main__product__tabs__active2
+        %h3
+          %a{ href: "#" }
+            過去の取引
     .main__product__messages
       %ul.main__product__messages__trade-now
         %li
