--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -131,11 +131,11 @@
     }
   }
 }
-.fixer {
-}
-a {
-  text-decoration: none;
-}
-.main-contents__header--name :not(.main-contents__header--name:first) {
-  margin-top: 60px;
-}
+// .fixer {
+// }
+// a {
+//   text-decoration: none;
+// }
+// .main-contents__header--name :not(.main-contents__header--name:first) {
+//   margin-top: 60px;
+// }
