--- a/app/assets/stylesheets/_side-barMypage.scss
+++ b/app/assets/stylesheets/_side-barMypage.scss
@@ -2,11 +2,10 @@
   position: relative;
     min-height: 100%;
     background: #f5f5f5;
-    font-family: 'Source Sans Pro', Helvetica , Arial, '游ゴシック体', 'YuGothic', 'メイリオ', 'Meiryo', sans-serif;
+    // font-family: 'Source Sans Pro', Helvetica , Arial, '游ゴシック体', 'YuGothic', 'メイリオ', 'Meiryo', sans-serif;
     font-size: 14px;
     color: #333;
     line-height: 1;
-    overflow: scroll;
   .side-bar-box{
     position:relative;
     border-top: 1px solid #eee;
