--- a/app/views/product/product-placing-page.html.haml
+++ b/app/views/product/product-placing-page.html.haml
@@ -79,12 +79,27 @@
                   .profit
                     .left 販売利益
                     .right -
-
-                    .select-box
-                      %i.fas.fa-republican
-                      %select.select-default{name: "scope"}
-                        %option{selected: "selected"} --
-
+              .btn-box
+                .agreement
+                  %p.check-items 
+                    = link_to "禁止されている出品", "https://www.mercari.com/jp/help_center/getting_started/prohibited_items/"
+                    、
+                    = link_to "行為", "https://www.mercari.com/jp/help_center/getting_started/prohibited_conduct/"
+                    を必ずご確認ください。
+                  %p.check-items
+                    またブランド品でシリアルナンバー等がある場合はご記載ください。
+                    = link_to "偽ブランドの販売", "https://www.mercari.com/jp/help_center/getting_started/counterfeit_goods/"
+                    は犯罪であ
+                  %p.check-items
+                    り処罰される可能性があります。
+                  %p.check-items
+                    また、出品をもちまして
+                    = link_to "加盟店規約", "https://www.mercari.com/jp/seller_terms/"
+                    に同意したことになります。
+                  .btn-box
+                    %button{type: "submit"} , class: "submit-button"
+                    出品する
+                    = link_to "もどる", "https://www.mercari.com/jp/"
   .footer 
     .links
       %ul
