--- a/app/assets/stylesheets/_header_footer.scss
+++ b/app/assets/stylesheets/_header_footer.scss
@@ -14,7 +14,7 @@
         cursor: pointer;
         margin: 0 auto;
       }
-      .header-logo:hover{
+      &__logo:hover{
         opacity: 0.7;
       }
     }
@@ -93,7 +93,7 @@
     overflow: scroll;
     .header{
       height: 56px;
-      .header-logo{
+      &__logo{
         margin: 0 auto;
         width:120px;
         height: 33px;
@@ -102,7 +102,7 @@
         position: relative;
         top:11.5px;
       }
-      .header-logo:hover{
+      &__logo:hover{
         opacity: 0.7;
       }
     }
